# replace

./: .gitignore  CMakeLists.txt  compile_flags.txt
include/replace/: args.h  callback.h  iter.h  macros.h  replace.h
src/: iter.c  main.c  replace.c
